# ghostvault-kv

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
cli/src/main/java/: CLIParser.java  CmdExecutor.java  GhostvaultCLI.java  Startup.java
cli/src/main/java/Commands/: CloseCommand.java  CmdResultType.java  CommandResult.java  DeleteCommand.java  Executable.java  GetCommand.java  HelpCommand.java  PutCommand.java
core/: build.gradle.kts
core/src/main/java/ghostvaultkv/api/: GhostvaultKVStore.java  GhostvaultKVStoreImpl.java
docs/: architecture.md  change-log.md  roadmap.md
jni/: build.gradle.kts
jni/src/main/java/: NativeGhostvaultKVStore.java
jni/src/main/java/ghostvaultkv/internal/: NativeGhostvaultKV.java  NativeGhostvaultKVWrapper.java
native/: CMakeLists.txt
native/include/: append_log.h  ghostvaultkv_store.h  index_hashmap.h
native/src/: append_log.c  ghostvaultkv_store.c  index_hashmap.c  jni_bridge.c
